--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "run-p type-check \"build-only {@}\" --",
+		"build": "vue-tsc && vite build",
+		"build:github": "cross-env NODE_ENV=production BASE_URL=/<REPO_NAME>/ vue-tsc && vite build",
+		"build:check": "run-p type-check \"build-only {@}\" --",
 		"preview": "vite preview",
 		"build-only": "vite build",
 		"type-check": "vue-tsc --build --force",
@@ -27,6 +29,7 @@
 		"@vue/eslint-config-prettier": "^9.0.0",
 		"@vue/eslint-config-typescript": "^13.0.0",
 		"@vue/tsconfig": "^0.5.1",
+		"cross-env": "^7.0.3",
 		"eslint": "^8.57.0",
 		"eslint-plugin-vue": "^9.23.0",
 		"npm-run-all2": "^6.1.2",
