--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vue-tsc && vite build",
-		"build:github": "cross-env NODE_ENV=production BASE_URL=/<REPO_NAME>/ vue-tsc && vite build",
+		"build:github": "cross-env NODE_ENV=production BASE_URL=/playgrond_vue3/ vue-tsc && vite build",
 		"build:check": "run-p type-check \"build-only {@}\" --",
 		"preview": "vite preview",
 		"build-only": "vite build",
