--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@rushstack/eslint-patch": "^1.8.0",
 		"@tsconfig/node20": "^20.1.4",
 		"@types/node": "^20.12.5",
+		"@types/three": "^0.166.0",
 		"@vitejs/plugin-vue": "^5.0.4",
 		"@vue/eslint-config-prettier": "^9.0.0",
 		"@vue/eslint-config-typescript": "^13.0.0",
@@ -36,6 +37,7 @@
 		"prettier": "^3.2.5",
 		"sass": "^1.77.5",
 		"sass-loader": "^14.2.1",
+		"three": "^0.166.1",
 		"typescript": "~5.4.0",
 		"vite": "^5.2.8",
 		"vue-loader": "^17.4.2",
