--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"@popperjs/core": "^2.11.8",
 		"bootstrap": "^5.3.3",
+		"cannon-es": "^0.20.0",
 		"pinia": "^2.1.7",
 		"vue": "^3.4.21",
 		"vue-router": "^4.3.0"
@@ -24,12 +25,13 @@
 	"devDependencies": {
 		"@rushstack/eslint-patch": "^1.8.0",
 		"@tsconfig/node20": "^20.1.4",
-		"@types/node": "^20.12.5",
+		"@types/node": "^20.14.10",
 		"@types/three": "^0.166.0",
 		"@vitejs/plugin-vue": "^5.0.4",
 		"@vue/eslint-config-prettier": "^9.0.0",
 		"@vue/eslint-config-typescript": "^13.0.0",
 		"@vue/tsconfig": "^0.5.1",
+		"ammo.js": "^0.0.10",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.57.0",
 		"eslint-plugin-vue": "^9.23.0",
