--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "strict": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "typeRoots": ["./node_modules/@types", "./types", "node_modules/ammojs-typed/ammo/ambient"],
+    "typeRoots": ["./node_modules/@types", "./types"],
     "esModuleInterop": true,
     "target": "esnext",
     "module": "esnext",
