--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,7 @@
     "lib": ["esnext", "dom"],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "@/types": ["src/types"]
+      "@/*": ["src/*"]
     }
   }
 }
