--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "importHelpers": true,
     "resolveJsonModule": true,
     "lib": ["esnext", "dom"],
-    "baseUrl": "/playgrond_vue3/",
+    "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
     }
