--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@popperjs/core": "^2.11.8",
 		"bootstrap": "^5.3.3",
 		"cannon-es": "^0.20.0",
+		"gsap": "^3.12.5",
 		"pinia": "^2.1.7",
 		"vue": "^3.4.21",
 		"vue-router": "^4.3.0"
