--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"type": "module",
 	"scripts": {
 		"build": "set NODE_ENV=production && nuxt build",
+		"build:github": "set NODE_ENV=production BASE_URL=/playgrond_vue3/ vue-tsc && vite build",
 		"dev": "nuxt dev",
 		"generate": "nuxt generate",
 		"preview": "nuxt preview",
