--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"devDependencies": {
 		"@nuxt/eslint-config": "^0.3.13",
+		"@types/gsap": "^3.0.0",
 		"eslint": "^8.57.0",
 		"prettier": "^3.3.3",
 		"sass": "^1.77.8",
