--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@nuxt/eslint-config": "^0.3.13",
 		"@types/bootstrap": "^5.2.10",
 		"@types/gsap": "^3.0.0",
+		"@types/three": "^0.166.0",
 		"eslint": "^8.57.0",
 		"prettier": "^3.3.3",
 		"sass": "^1.77.8",
